<resources>
    <string name="app_name">নাটোর পল্লী বিদ্যুৎ সমিতি-২</string>
    <string name="title">নাটোর পল্লী বিদ্যুৎ সমিতি-২\nডিজিটাল সেবা</string>

    <string name="sms_new_connection_complete_title">অনলাইন আবেদন সম্পন্ন সংক্রান্ত এসএমএসঃ</string>
    <string name="sms_new_connection_complete_desc">অনলাইন আবেদন ঠিকভাবে সম্পন্ন হলে ট্র্যাকিং নং ও পিনকোড সহ ওয়্যারিং সম্পন্ন করে কনফার্ম করার জন্য একটি এসএমএস পাঠানো হয়। এই এসএমএসের একটি নমুনা হল- </string>
    <string name="sms_new_connection_complete_sample">Success.Your Tracking ID:XXXXXXXXXXXXXXX and Pin Code:XXXXXXXX.Complete House Wiring and Confirm Through Online.Palli Bidyut</string>
    <string name="sms_application_deposite_title">জামানতসহ আবেদন ফি জমা সংক্রান্ত এসএমএসঃ</string>
    <string name="sms_application_deposite_desc">ওয়্যারিং সম্পন্ন করে কনফার্ম করা হলে ওয়্যারিং পরিদর্শক আবেদনকৃত সংযোগ পরিদর্শন করে রিপোর্ট করেন। অফিস আবেদনটি সরেজমিন বিবেচনা করে সংযোগ দেয়া সম্ভব হলে গ্রাহকের কাছে জামানতের টাকাসহ আবেদন ফি জমা দেবার জন্য এসএমএস পাঠানো হয়। এসএমএসে ট্র্যাকিং নং, রকেটে টাকা জমা দেবার রেফারেন্স নং সহ টাকার পরিমাণ উল্লেখ থাকে। একটি নমুনা এসএমএস হলো-</string>
    <string name="sms_application_deposite_sample">Success.Tracking ID:XXXXXXXXXXXXXXX,Ref/Bill No:XXXXXXXX.Please deposit TK.965(App. Fee:115,CD:800,Mem. Fee:50)within 2 working days.Palli Bidyut</string>

    <string name="sms_bill_title">বিদ্যুৎ বিল সংক্রান্ত এসএমএস প্রদান</string>
    <string name="sms_bill_desc">প্রতি মাসে গ্রাহককে তার বিদ্যুুৎ বিল পরিশোধের সর্বশেষ তারিখসহ প্রেরণ করা হয়। একটি নমুনা এসএমএস হলো-</string>
    <string name="sms_bill_sample">হিঃ XXX/XXXX অক্টোবর বিল XX টাকা। DD/MM/YY মধ্যে পরিশোধ করুন। পবিস</string>

    <string name="achievement_details">নাটোর পল্লী বিদ্যুৎ সমিতি-২ এর অসাধারণ অর্জন\nবিগত ৩০বছর বনাম বর্তমান সরকারের ১৪ বছর</string>
    <string name="vision_title">ভিশন (রূপকল্প)</string>
    <string name="vision">নাটোর পল্লী বিদ্যুৎ সমিতি-২ এর আওতাধীন সকল জনগনকে গুনগত মানের বিদ্যুৎ সরবরাহের মাধ্যমে গ্রাহক সেবা নিশ্চিত করা।</string>
    <string name="mission_title">মিশন (অভিলক্ষ্য)</string>
    <string name="mission">নতুন সংযোগের আবেদনের প্রেক্ষিতে স্বল্প সময়ের মধ্যে দ্রুত, সংযোগ প্রত্যাশী সকলকে বিদ্যুৎ সুবিধা পৌছে দেওয়া।</string>
    <string name="banner_content_description">নাটোর পল্লী বিদ্যুৎ সমিতি-২</string>

    <string name="menu_about_us">আমাদের সম্পর্কে</string>
    <string name="menu_at_a_glance">এক নজরে</string>
    <string name="menu_vision_mission">ভিশন ও মিশন</string>
    <string name="menu_our_achievements">আমাদের অর্জন সমূহ</string>
    <string name="menu_samity_board">সমিতি বোর্ড</string>
    <string name="menu_office_head">অফিস প্রধান</string>
    <string name="menu_officers">নির্বাহী কর্মকর্তাগণ</string>
    <string name="menu_junior_officers">জুনিয়র কর্মকর্তাগণ</string>
    <string name="menu_offices">নাটোর পবিস-২ এর অফিস সমূহ</string>
    <string name="menu_complain_centres">অভিযোগ কেন্দ্রের মোবাইল নং</string>
    <string name="menu_power_outage_contact">বিদ্যুৎ বিভ্রাটে জরুরী যোগাযোগ</string>


    <string name="menu_our_services">আমাদের সেবা</string>
    <string name="menu_electricity_connection">বিদ্যুৎ সংযোগ সংক্রান্ত</string>
    <string name="menu_electricity_connection_rules">বিদ্যুৎ সংযোগের নিয়মাবলী</string>
    <string name="menu_connection_industry">শিল্প সংযোগ</string>
    <string name="menu_connection_domestic">আবাসিক সংযোগ</string>
    <string name="menu_sms_connection">নতুন সংযোগ সংক্রান্ত এসএমএস</string>

    <string name="menu_electricity_bill">বিদ্যুৎ বিল সংক্রান্ত</string>
    <string name="menu_electricity_tariff">বিদ্যুতের মূল্যহার</string>
    <string name="menu_sms_electricity_bill">বিদ্যুৎ বিল সংক্রান্ত এসএমএস</string>
    <string name="menu_bill_collection_bank">বিদ্যুৎ বিল আদায়কারী ব্যাংক ও শাখার নাম</string>
    <string name="menu_bill_from_home">ঘরে বসে বিদ্যুৎ বিল প্রদান পদ্ধতি</string>
    <string name="menu_bill_bkash">বিকাশ অ্যাপ</string>
    <string name="menu_bill_bKash_USSD">বিকাশ USSD</string>
    <string name="menu_electricity_bill_calculator">বিদ্যুৎ বিল ক্যালকুলেটর\n(এলটি-এ: আবাসিক সংযোগের ক্ষেত্রে)</string>

    <string name="menu_citizen_charter">সিটিজেন চার্টার</string>

    <string name="menu_websites">প্রয়োজনীয় ওয়েবসাইট সমূহ</string>

    <string name="menu_social_media">সোস্যাল মিডিয়া</string>

    <string name="menu_opinion_complain">বিদ্যুৎ বা অফিস সংক্রান্ত মতামত ও অভিযোগ</string>
    <string name="menu_grs">অভিযোগ প্রতিকার ব্যবস্থা (GRS)</string>
    <string name="menu_complain_google_form">সরাসরি অফিসে অভিযোগ (Google Form)</string>

    <string name="menu_related_apps">রিলেটেড অ্যাপসমূহ</string>

    <string name="menu_notice_tender">নোটিশ ও দরপত্র</string>
    <string name="menu_notice">নোটিশ</string>
    <string name="menu_tender">দরপত্র</string>
    <string name="menu_news">খবর</string>
    <string name="menu_job">চাকরি</string>

    <string name="menu_communication">যোগাযোগ</string>
    <string name="menu_communication_post">ডাক যোগাযোগ</string>
    <string name="menu_communication_map">যোগাযোগ ম্যাপ</string>

    <string name="menu_awareness">বিদ্যুৎ ব্যবহার সংক্রান্ত সচেতনতা</string>

    <string name="web_view_title">Web View</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="last_update_time">last_update_time</string>
    <string name="force_sync">Force Sync</string>
    <string name="menu_service_list">কী সেবা কীভাবে পাবেন</string>
    <string name="nav_open">ওপেন</string>
    <string name="nav_close">বন্ধ</string>
    <string name="menu_settings">সেটিংস</string>
    <string name="menu_about_app">অ্যাপ সম্পর্কে</string>
    <string name="menu_favorites">আপনার পছন্দের মেনুসমূহ</string>
    <string name="menu_bill_rocket_app">রকেট অ্যাপ</string>
    <string name="menu_bill_rocket_USSD">রকেট USSD</string>
    <string name="menu_bill_gpay_app">GPay অ্যাপ</string>
    <string name="menu_bill_gpay_USSD">GPay USSD</string>
    <string name="menu_bill_upay_app">UPay অ্যাপ</string>
    <string name="menu_bill_ucash_USSD">UCash USSD</string>
    <string name="menu_other_official_contacts">অন্যান্য সরকারি অফিসের কর্মকর্তাগণ</string>
    <string name="menu_connection_domestic_new">অনলাইন বিদ্যুৎ সংযোগ\n(রাজশাহী পবিস এবং যশোর পবিস-১ এর জন্য)</string>
    <string name="menu_others">অন্যান্য</string>
    <string name="header_text">স্বাগতম, সম্মানিত গ্রাহক</string>
    <string name="about_app_description">নাটোর পল্লী বিদ্যুৎ সমিতি-২ ডিজিটাল সেবা অ্যাপটি একটি সেবামূলক অ্যাপ। এই অ্যাপটিতে নাটোর পল্লী বিদ্যুৎ সমিতি-২ সংক্রান্ত সকল তথ্য পাবেন। যেমন:</string>
    <string name="about_app_features">১.নাটোর পল্লী বিদ্যুৎ সমিতি-২ সংক্রান্ত তথ্যাবলি\n২.প্রয়োজনীয় সকল মোবাইল নম্বর\n৩.বিদ্যুৎ সংযোগ, বিদ্যুৎ বিল ও অন্যান্য সেবা সংক্রান্ত তথ্যাবলী\n৪.প্রয়োজনীয় ওয়েবসাইট ও ফেসবুক পেজসমূহ\n৫.নাটোর পল্লী বিদ্যুৎ সমিতি-২ এর নোটিশ, দরপত্র ও চাকরী সংক্রান্ত তথ্যাবলি\n৬.অফিস বা সেবা সংক্রান্ত মতামত ও অভিযোগ প্রদান\n৭.অন্যান্য সরকারী অফিস সমূহের কর্মকর্তাসমূহের তথ্যাবলি\n৮. বিদ্যুৎ সংক্রান্ত সচেতনতামূলক প্রচারণা</string>
    <string name="about_app_developer">অ্যাপ ডেভেলপমেন্টঃ\nআসাদুল্লাহিল গালিব\nএজিএম(আইটি)\nনাটোর পল্লী বিদ্যুৎ সমিতি-২ \n\nসার্বিক সহযোগীতায়ঃ\nমোঃ রাকিবুল হাসান\nএজিএম(আইটি)\nনাটোর পল্লী বিদ্যুৎ সমিতি-২\n\nমোঃ মাসুদুজ্জামান\nজুনিঃ ইঞ্জিনিয়ার (আইটি-১)\nনাটোর পল্লী বিদ্যুৎ সমিতি-২\n\nমোঃ হুমায়ুন কবির\nজুনিঃ ইঞ্জিনিয়ার (আইটি)\nনাটোর পল্লী বিদ্যুৎ সমিতি-২\n\n\nপৃষ্ঠপোষকতায়ঃ\nনাটোর পল্লী বিদ্যুৎ সমিতি-২ এর সকল কর্মকর্তা/ কর্মচারীবৃন্দ</string>
    <string name="menu_communication_call">কল করুন</string>
    <string name="menu_settings_favorite_menu">আপনার পছন্দের মেনু সমুহ</string>
    <string name="menu_settings_choose_favorite_menu">আপনার পছন্দের মেনু সিলেক্ট করুন</string>
    <string name="menu_settings_available_menu">যেসব মেনু পছন্দের মেন হিসেবে ব্যবহার করতে পারবেন</string>
    <string name="menu_home">হোম</string>
    <string name="sync_running">Sync is already running.</string>
    <string name="sync_confirmation">Do you want to sync?</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sliding_text">বিদ্যুৎ জাতীয় সম্পদ, আসুন বিদ্যুৎ অপচয় রোধ করি। ঘর থেকে বের হওয়ার সময় বৈদ্যুতিক সুইচ বন্ধ রাখি, বৈদ্যুতিক দুর্ঘটনা এড়িয়ে চলি। নিরবচ্ছিন্ন বিদ্যুৎ সরবরাহ অব্যাহত রাখতে নিয়মিত বিদ্যুৎ বিল পরিশোধ করি, ঘরে বসেই বিদ্যুৎ বিল দেওয়ার অপূর্ব সুযোগ গ্রহণ করি।</string>
    <string name="update_available_title">নাটোর পল্লী বিদ্যুৎ সমিতি-২ অ্যাপের একটি আপডেট আছে!!!</string>
    <string name="update_available_content">অ্যাপটি আপডেট করার জন্য আপডেট বাটনে ট্যাপ করুন, প্লে স্টোর ওপেন হলে আপডেট বাটনে ট্যাপ করুন</string>
    <string name="about_app_data_collection">অ্যাপে ব্যবহৃত সকল তথ্য সংশ্লিষ্ট প্রতিষ্ঠানের ওয়েবসাইট থেকে সংগ্রহ করা হয়েছে। আপনি যদি মনে করেন কোন তথ্যে ভূল আছে, তাহলে অ্যাপ ডেভেলপারের সাথে সরাসরি যোগাযোগ করতে পারেন।</string>
    <string name="about_app_data_collect">অ্যাপের তথ্য সংগ্রহ সংক্রান্তঃ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information_desc">তথ্যের বিবরণ</string>
    <string name="sl_no">ক্রমিক নং</string>
    <string name="bank_name">ব্যাংকের নাম</string>
    <string name="branches">শাখাসমূহ</string>
    <string name="total_consumption_kwh">মোট ব্যবহার(কি:ও:ঘ:)</string>
    <string name="zero">0</string>
    <string name="cont_load">চুক্তিবদ্ধ লোড:</string>
    <string name="life_line_consumption">লাইফ লাইনঃ (০-৫০ ইউনিট)</string>
    <string name="first_slab_consumption">প্রথম ধাপঃ (০-৭৫ ইউনিট)</string>
    <string name="second_slab_consumption">দ্বিতীয় ধাপঃ (৭৬-২০০ ইউনিট)</string>
    <string name="third_slab_consumption">তৃতীয় ধাপঃ (২০১-৩০০ ইউনিট)</string>
    <string name="fourth_slab_consumption">চতুর্থ ধাপঃ (৩০১-৪০০ ইউনিট)</string>
    <string name="fifth_slab_consumption">পঞ্চম ধাপঃ (৪০১-৬০০ ইউনিট)</string>
    <string name="sixth_slab_consumption">ষষ্ঠ ধাপঃ (৬০০ ইউনিট এর উর্ধ্বে)</string>
    <string name="energy_charge">এনার্জি/মিনিমাম চার্জ</string>
    <string name="demand_charge">ডিমান্ড চার্জ</string>
    <string name="net_bill">নীট বিল</string>
    <string name="vat">ভ্যাট</string>
    <string name="meter_rent">মিটার ভাড়া</string>
    <string name="total_bill">মোট বিল</string>
    <string name="late_payment_fee">বিলম্ব মাশুলঃ নীট বিলের ৫%</string>
    <string name="total_bill_with_lpc">বিলম্ব মাশুলসহ সর্বমোট বিল</string>
    <string name="not_according_to_seniority">(জ্যেষ্ঠতার ক্রমানুসারে নয়)</string>
    <string name="description">বিবরণ</string>
    <string name="date">তারিখ</string>
    <string name="pdf">পিডিএফ</string>
    <string name="g_map_loc">Natore+Palli+Bidyut+Samity-2,+Bonpara,+Natore</string>
</resources>